# langchain_gpt

./: AI.html  LICENSE  README.md  Vega & Banner Weekly Demo_2023-11-06.vtt  hackathon.py  jupyter.ipynb  klarna_gpt_plugin.py  langchain_intro.py  meeting_minutes.md  pdf.py  pyproject.toml  requirements.txt  webpages.py
.devcontainer/: devcontainer.json
intro/: agent_chain.py  direct_call_llm.py  memory.py  prompt_chain.py
