[tool.poetry]
name = "langchaingpt"
version = "0.1.0"
description = ""
authors = ["Kaihang An <ztmdsbt@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = {extras = ["llm"], version = "^0.0.285"}
openai = "^0.28.0"
pdfplumber = "^0.10.2"
python-dotenv = "^1.0.0"
streamlit = "^1.26.0"
faiss-cpu = "^1.7.4"
tiktoken = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
